<resources>
    <string name="app_name">DesafioPractico</string>

    <string name="titulo_principal">Primer Desafío Práctico</string>
    <string name="ejercicio_1">Ejercicio 1: Promedio</string>
    <string name="ejercicio_2">Ejercicio 2: Salario</string>
    <string name="ejercicio_3">Ejercicio 3: Calculadora</string>

    <string name="titulo_promedio">Ejercicio 1: Promedio</string>
    <string name="nombre">Nombre</string>
    <string name="nota_1">Nota 1 (20%)</string>
    <string name="nota_2">Nota 2 (20%)</string>
    <string name="nota_3">Nota 3 (20%)</string>
    <string name="nota_4">Nota 4 (20%)</string>
    <string name="nota_5">Nota 5 (20%)</string>
    <string name="calcular">Calcular</string>
    <string name="regresar">Regresar</string>

    <string name="error_campos_vacios">Completa todos los campos</string>
    <string name="error_notas_rango">Las notas deben estar entre 0 y 10</string>

    <string name="resultado_promedio">%1$s, tu promedio es %2$s\n%3$s</string>

    <string name="estado_aprobado">Aprobado</string>
    <string name="estado_reprobado">Reprobado</string>

    <string name="canal_notificacion_nombre">Resultados del promedio</string>
    <string name="notificacion_titulo">Resultado del promedio</string>
    <string name="notificacion_contenido">Promedio: %1$s - %2$s</string>


    <string name="titulo_salario">Ejercicio 2: Salario</string>
    <string name="nombre_empleado">Nombre del empleado</string>
    <string name="salario_base">Salario base</string>

    <string name="error_empleado_vacio">Ingresa el nombre del empleado</string>
    <string name="error_salario_vacio">Ingresa el salario</string>
    <string name="error_salario_invalido">El salario debe ser mayor que cero</string>

    <string name="resultado_salario">
Empleado: %1$s
Renta: $%2$s
AFP (7.25%%): $%3$s
ISSS (3%%): $%4$s
Total descuentos: $%5$s
</string>

    <string name="salario_bruto">Salario bruto: $%1$s</string>
    <string name="salario_neto">Salario neto: $%1$s</string>



    <string name="titulo_calculadora">Ejercicio 3: Calculadora</string>
    <string name="numero_1">Número 1</string>
    <string name="numero_2">Número 2</string>
    <string name="resultado_calculadora">Resultado</string>

    <string name="suma">+</string>
    <string name="resta">−</string>
    <string name="multiplicacion">×</string>
    <string name="division">÷</string>
    <string name="exponente">xʸ</string>
    <string name="raiz">√</string>

    <string name="error_campos_calculadora">Completa los dos números</string>
    <string name="error_division_cero">No se puede dividir entre cero</string>
    <string name="error_numero_invalido">Ingresa un número válido</string>

    <string name="ver_historial">Ver historial</string>
    <string name="historial_vacio">No hay operaciones guardadas</string>
</resources>